--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
   </div>
   <footer>
     <hr>
-    © KatieGirl 2021 | KatieGirl#3059 <a href="https://discord.gg/ucY2jU2r">https://discord.gg/ucY2jU2r</a> - All of the Bambi/Bambi Sleep copyright goes to the creator or Bambi Sleep (<a href="https://bambisleep.blogspot.com/">https://bambisleep.blogspot.com/</a>)
+    <div class="footer-copyright text-center py-3">
+      © KatieGirl 2021 | KatieGirl#3059 <a href="https://discord.gg/ucY2jU2r">https://discord.gg/ucY2jU2r</a> - All of the Bambi/Bambi Sleep copyright goes to the creator or Bambi Sleep (<a href="https://bambisleep.blogspot.com/">https://bambisleep.blogspot.com/</a>)
+    </div>
   </footer>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
