--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <title>Bambi Playlist Creator</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>  
 
 <body>
@@ -30,7 +31,7 @@
       </div>
     </div>
   </div>
-  <footer>
+  <footer class="footer">
     <div class="footer-copyright text-center py-3">
       © KatieGirl 2021 | KatieGirl#3059 <a href="https://discord.gg/ucY2jU2r">https://discord.gg/ucY2jU2r</a> - All of the Bambi/Bambi Sleep copyright goes to the creator or Bambi Sleep (<a href="https://bambisleep.blogspot.com/">https://bambisleep.blogspot.com/</a>)
     </div>
