--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
         <div id="content">
           <hr />
           <form onSubmit="return false;">
+            <h2>Step 1: Select Your Files</h2>
             <div class="form-group">
               
             </div>
+            <h2>Step 2: Click Create</h2>
             <button type="submit" class="btn btn-primary">Create</button>
+            <h2>Step 3: Share!</h2>
             <hr/>
           </form>
           <p id="a" class="text-center"></p>
