--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h2>Step 3: Share!</h2>
             <hr/>
           </form>
-          <p id="a" class="text-center"></p>
+          <p class="text-center">Permalink: <a id="permLink" href=""></a></p>
         </div>
       </div>
     </div>
