--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
           <form onSubmit="return false;">
             <h3>Step 1: Select Your Files</h3>
             <div class="form-group">
+              <!-- ================================================= -->
+              <!-- ================================================= -->
               <div>Bambi Bimbodoll Conditioning<br>
                 <label class="container">00 Rapid Induction
-                  <input type="checkbox" checked="checked">
+                  <input type="checkbox">
                   <span class="checkmark"></span>
                 </label>
 
@@ -78,6 +80,37 @@
                   <span class="checkmark"></span>
                 </label>
               </div>
+              <!-- ================================================= -->
+              <!-- ================================================= -->
+              <div>Bambi Bimbodoll Conditioning<br>
+                <label class="container">01 Blank Mindless Doll
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">02 Cock Dumb Hole
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">03 Uniform Slut Puppet
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">04 Vain Horny Happy
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">05 Bimbo Drift
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+              </div>
+              <!-- ================================================= -->
+              <!-- ================================================= -->
             </div>
             <h3>Step 2: Change Order</h3>
             <div id="order">
