--- a/index.html
+++ b/index.html
@@ -111,6 +111,25 @@
               </div>
               <!-- ================================================= -->
               <!-- ================================================= -->
+              <div>Bambi Fuckpuppet Freedom<br>
+                <label class="container">01 Fake Plastic Fuckpuppet
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">02 Designer Pleasure Puppet
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">03 Bimbo Fuckpuppet Oblivion
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+              </div>
+              <!-- ================================================= -->
+              <!-- ================================================= -->
             </div>
             <h3>Step 2: Change Order</h3>
             <div id="order">
