--- a/index.html
+++ b/index.html
@@ -130,6 +130,39 @@
               </div>
               <!-- ================================================= -->
               <!-- ================================================= -->
+              <div>Bambi Fucktoy Fantasy<br>
+                <label class="container">01 Blowup Pleasure Toy
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">02 Perfect Bimbo Maid
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">03 Restrained and Milked
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+              </div>
+              <!-- ================================================= -->
+              <!-- ================================================= -->
+              <div>Bambi Fucktoy Submission<br>
+                <label class="container">01 Bimbo Giggletime
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">02 Mindlocked Cock Zombie
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+              </div>
+              <!-- ================================================= -->
+              <!-- ================================================= -->
             </div>
             <h3>Step 2: Change Order</h3>
             <div id="order">
