--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <br />
         <div id="content">
           <hr />
-          <form onSubmit="return false;">
+          <form onInput="inputHandle();" onSubmit="return false;">
             <h3>Step 1: Select Your Files</h3>
             <div class="form-group">
               
