--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
             <h3>Step 3: Click Create</h3>
             <button type="submit" class="btn btn-primary">Create</button>
             <h3>Step 4: Listen/Share!</h3>
+            <button class="btn btn-primary">Play</button><button class="btn btn-primary">Stop</button>
             <hr/>
           </form>
           <p class="text-center">Permalink: <a id="permLink" href=""></a></p>
