--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Bambi Playlist Creator</title> 
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet"> 
+  <meta name="description" content="Bambi Playlist Creator, a sharing/creation platform for Bambi Sleep Playlists" />
 </head>    
 
 <body>
@@ -177,6 +178,7 @@
             <hr/>
           </form>
           <p class="text-center">Permalink: <a id="permLink" href=""></a></p>
+          <p class="text-center"><a href="/about.html">About</a></p>
         </div>
       </div>
     </div>
