--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
             <br><br> Please contact me with any feedback! <br>KatieGirl#3059<br><a href="https://discord.gg/ucY2jU2r">My Discord server</a><br><a href="https://hypnotube.com/user/katiegirl-39074/">Me on Hypnotube</a>
             <hr/>
           </form>
-          <p class="text-center"><a href="/about.html">Home</a></p>
+          <p class="text-center"><a href="/index.html">Home</a></p>
         </div>
       </div>
     </div>
