--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">  
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Bambi Playlist Creator</title> 
+  <title>Bambi Playlist Creator | About</title> 
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet"> 
   <meta name="description" content="Bambi Playlist Creator, a sharing/creation platform for Bambi Sleep Playlists" />
@@ -25,7 +25,7 @@
   <div class="container" style="width: 650px;"> 
     <div class="row">
       <div class="col-lg-12">
-        <h1 class="text-center">Bambi Playlist Creator | About</h1>
+        <h1 class="text-center">Bambi Playlist Creator</h1>
         <br />
         <div id="content">
           <hr />
