--- a/index.html
+++ b/index.html
@@ -175,6 +175,65 @@
               </div>
               <!-- ================================================= --><br>
               <!-- ================================================= -->
+              <div>Bambi Enforcement<br>
+                <label class="container">00 Bimbo Drone
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">01 Bimbo Relaxation
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+                
+                <label class="container">02 Bimbo Mindwipe
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">03 Bimbo Slumber
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">04 Bimbo Tranquility
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">05 Bimbo Pride
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">06 Bimbo Pleasure
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">07 Bimbo Servitude
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">08 Bimbo Addiction
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">09 Bimbo Amnesia
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">10 Bimbo Protection
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+              </div>
+              <!-- ================================================= --><br>
+              <!-- ================================================= -->
             </div>
             <h3>Step 2: Change Order</h3>
             <div id="order">
