--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div id="content">
           <hr />
           <form onInput="inputHandle();" onSubmit="return false;">
-            <h3>Step 1: Select Your Files</h3>
+            <h3>Step 1: Select Your Files (if you came here from a sharing link, just click play!)</h3>
             <div class="form-group">
               
               <!-- ================================================= -->
