--- a/perma.html
+++ b/perma.html
@@ -37,7 +37,7 @@
             <hr/>
           </form>
           <p class="text-center">Permalink: <a id="permLink" href=""></a></p>
-          <p class="text-center"><a href="/about.html">About</a></p>
+          <p class="text-center"><a href="/">Home</a></p>
         </div>
       </div>
     </div>
