--- a/about.html
+++ b/about.html
@@ -38,6 +38,13 @@
             the link part it will cause errors (if you accidentally do this, just check and uncheck a checkbox and it should fix it). Click create AFTER ANY CHANGES! Click the play 
             and pause buttons to play and pause the playlist. Copy the permalink and share it with your friends to enjoy the Bambi Sleep Experience together!
             <br><br> Please contact me with any feedback! <br>KatieGirl#3059<br><a href="https://discord.gg/ucY2jU2r">My Discord server</a><br><a href="https://hypnotube.com/user/katiegirl-39074/">Me on Hypnotube</a>
+            <br>
+            <h3>Donate</h3>
+            Feel free to donate BTC, ETH or DOGE to these addresses. It really helps out!
+            <br>
+            BTC: 13fQtM7ZPzJinnsp612QhnNAUi8WEmgSv3
+            ETH: 0xabcfa16abba8df9e82e211929b3ddaba743f8665
+            DOGE: DBq1LuGvpUXDrMQsqX4czftuffNMYGpthU
             <hr/>
           </form>
           <p class="text-center"><a href="/index.html">Home</a></p>
