--- a/about.html
+++ b/about.html
@@ -42,8 +42,8 @@
             <h3>Donate</h3>
             Feel free to donate BTC, ETH or DOGE to these addresses. It really helps out!
             <br>
-            BTC: 13fQtM7ZPzJinnsp612QhnNAUi8WEmgSv3
-            ETH: 0xabcfa16abba8df9e82e211929b3ddaba743f8665
+            BTC: 13fQtM7ZPzJinnsp612QhnNAUi8WEmgSv3<br>
+            ETH: 0xabcfa16abba8df9e82e211929b3ddaba743f8665<br>
             DOGE: DBq1LuGvpUXDrMQsqX4czftuffNMYGpthU
             <hr/>
           </form>
