--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 </head>    
 
 <body>
+  <ul>
+    <li><a href="/">Home</a></li>
+    <li><a href="/about.html">About</a></li>
+    <li><a href="/perma.html">Perma</a></li>
+  </ul>
   <div class="container" style="width: 650px;"> 
     <div class="row">
       <div class="col-lg-12">
