--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
 <body>
   <ul>
-    <li><a href="/">Home</a></li>
-    <li><a href="/about.html">About</a></li>
-    <li><a href="/perma.html">Perma</a></li>
+    <li class="s"><a href="/">Home</a></li>
+    <li class="s"><a href="/about.html">About</a></li>
+    <li class="s"><a href="/perma.html">Perma</a></li>
   </ul>
   <div class="container" style="width: 650px;"> 
     <div class="row">
