--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
   <div class="container" style="width: 650px;"> 
     <div class="row">
       <div class="col-lg-12">
-        <h1 class="text-center">Bambi Playlist Creator</h1>
+        <h1 class="text-center">Bambi Playlist Creator v1.0.2</h1>
         <br />
         <div id="content">
           <hr />
