--- a/about.html
+++ b/about.html
@@ -44,6 +44,12 @@
             and pause buttons to play and pause the playlist. Copy the permalink and share it with your friends to enjoy the Bambi Sleep Experience together!
             <br><br> Please contact me with any feedback! <br>KatieGirl#3059<br><a href="https://discord.gg/ucY2jU2r">My Discord server</a><br><a href="https://hypnotube.com/user/katiegirl-39074/">Me on Hypnotube</a>
             <br>
+            <h3>Changelog</h3>
+            <p>v1.0.0 - First release! Not all files added and minor bugs (including mediafire hosting)</p>
+            <p>v1.0.1 - Fixed almost all bugs (except mediafire hosting bug) </p>
+            <p>v1.0.2 - Added About, Permalink pages. Added navbar and create button no longer needed</p>
+            
+            <br>
             <h3>Donate</h3>
             Feel free to donate BTC, ETH or DOGE to these addresses. It really helps out!
             <br>
