--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
             <div id="order">
               
             </div>
-            <h3>Step 3: Click Create</h3>
-            <button onclick="create()" class="btn btn-primary">Create</button>
-            <h3>Step 4: Listen/Share!</h3>
+<!--             <h3>Step 3: Click Create</h3>
+            <button onclick="create()" class="btn btn-primary">Create</button> -->
+            <h3>Step 3: Listen/Share!</h3>
             <button id="play" class="btn btn-primary">Play</button><button id="stop" class="btn btn-primary">Pause</button>
             <hr/>
           </form>
