--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
             <h3>Changelog</h3>
             <p>v1.0.0 - First release! Not all files added and minor bugs (including mediafire hosting)</p>
             <p>v1.0.1 - Fixed almost all bugs (except mediafire hosting bug) </p>
-            <p>v1.0.2 - Added About, Permalink pages. Added navbar and create button no longer needed</p>
+            <p>v1.0.2 - Added About, Permalink pages. Added navbar and create button no longer needed. Fixed hosting problem (i think) using google drive now. Please let me know if there are any problems!</p>
             
             <br>
             <h3>Donate</h3>
