--- a/index.html
+++ b/index.html
@@ -247,11 +247,10 @@
 <!--             <h3>Step 3: Click Create</h3>
             <button onclick="create()" class="btn btn-primary">Create</button> -->
             <h3>Step 3: Listen/Share!</h3>
-            <button id="play" class="btn btn-primary">Play</button><button id="stop" class="btn btn-primary">Pause</button>
+            <p class="text-center">Permalink: <a id="permLink" href=""></a> (click this link to be taken to your generated playlist, you can also share this link with your friends!)</p>
+<!--             <button id="play" class="btn btn-primary">Play</button><button id="stop" class="btn btn-primary">Pause</button> -->
             <hr/>
           </form>
-          <p class="text-center">Permalink: <a id="permLink" href=""></a></p>
-          <p class="text-center"><a href="/about.html">About</a></p>
         </div>
       </div>
     </div>
