--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               </div>
               <!-- ================================================= --><br>
               <!-- ================================================= -->
-              <div>Bambi Bimbodoll Conditioning<br>
+              <div>Bambi Fuckdoll Brainwash<br>
                 <label class="container">01 Blank Mindless Doll
                   <input type="checkbox">
                   <span class="checkmark"></span>
@@ -236,6 +236,39 @@
                   <span class="checkmark"></span>
                 </label>
 
+              </div>
+              <!-- ================================================= --><br>
+              <!-- ================================================= -->
+              <div>Bambi Mental Makeover<br>
+                <label class="container">01 Sleepygirl Salon
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">02 Mentally Platinum Blonde
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+                
+                <label class="container">03 Automatic Airhead
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">04 Superficial Basic Bitch
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">05 Life Control Total Doll
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">07 Makeover Awakener
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
               </div>
               <!-- ================================================= --><br>
               <!-- ================================================= -->
