--- a/perma.html
+++ b/perma.html
@@ -38,7 +38,7 @@
           <hr />
           <form onInput="inputHandle();" onSubmit="return false;">
             <h3>Click play to listen!</h3>
-            <br><span id="nfils"></span> Files, Playlist duration: <span id="dur"></span></br>
+            <br><span id="nfils"></span> Files, Playlist duration: <span id="dur"></span><br>
             <button id="play" class="btn btn-primary">Play</button><button id="stop" class="btn btn-primary">Pause</button>
             <hr/>
           </form>
