--- a/perma.html
+++ b/perma.html
@@ -44,10 +44,10 @@
           </form>
           <p class="text-center">Permalink: <a id="permLink" href=""></a></p>
           <h3>My Favs</h3>
-          <p class="text-center"><a href="/perma.html?list=35,2,3,5,37,8,10">Bambi Makeover (thanks to Bambi Sparkles#9764)</a>
+          <p><a href="/perma.html?list=35,2,3,5,37,8,10">Bambi Makeover (thanks to Bambi Sparkles#9764)</a>
           <br><a href="/perma.html?list=1,2,4,8,33,14,28,34,18,9,10">Ultimate Brain Fry (thanks to Curiouser#8137)</a></p>
           <h3>Getting Started (Bambi calendar)</h3>
-          <p class="text-center"><a href="/perma.html?list=1,2,3,27,6,7,8,10">Playlist 1 for 4 weeks</a>
+          <p><a href="/perma.html?list=1,2,3,27,6,7,8,10">Playlist 1 for 4 weeks</a>
           <br><a href="/perma.html?list=1,2,3,27,28,29,6,7,8,9,32,33,34,10">Playlist 2 for the next 4 weeks after the first 4 weeks have passed.</a></p>
         </div>
       </div>
