--- a/perma.html
+++ b/perma.html
@@ -48,7 +48,13 @@
           <br><a href="/perma.html?list=1,2,4,8,33,14,28,34,18,9,10">Ultimate Brain Fry (thanks to Curiouser#8137)</a></p>
           <h3>Getting Started (Bambi calendar)</h3>
           <p><a href="/perma.html?list=1,2,3,27,6,7,8,10">Playlist 1 for 4 weeks</a>
-          <br><a href="/perma.html?list=1,2,3,27,28,29,6,7,8,9,32,33,34,10">Playlist 2 for the next 4 weeks after the first 4 weeks have passed.</a></p>
+          <br><a href="/perma.html?list=1,2,3,27,28,29,6,7,8,9,32,33,34,10">Playlist 2 for the next 4 weeks after the first 4 weeks have passed.</a>
+          <br><a href="/perma.html?list=11,27,28,29,13,14,32,33,34,15">Playlist 3 for additional 4 weeks. You have to listen to the Refresher-Playlist at this page, at least two times a week from this point on and to Playlist 3 on all other days.</a>
+          <br><a href="/perma.html?list=11,27,28,18,29,13,17,14,32,33,34,15">Playlist 4 for additional 4 weeks. You have to listen to the Refresher-Playlist at this page, at least two times a week from this point on and to Playlist 4 on all other days.</a>
+          <br><a href="/perma.html?list=24,11,3,27,28,29,6,7,8,9,32,33,34,15">Refresher-Playlist</a>
+          <br><a href="/perma.html?list=11,27,28,18,29,13,17,26,14,32,33,34,15">Fashionista</a>
+          <br><a href="/perma.html?list=11,24,27,35,36,32,33,34,40">Beauty salon</a>
+          </p>
         </div>
       </div>
     </div>
