--- a/perma.html
+++ b/perma.html
@@ -10,7 +10,7 @@
   <title>Bambi Playlist Creator | Permalink</title> 
   <link href="css/bootstrap.min.css" rel="stylesheet"> 
   <link href="css/style.css" rel="stylesheet"> 
-  <meta name="description" content="Bambi Playlist Creator, a sharing/creation platform for Bambi Sleep Playlists" />
+  <meta name="description" content="Bambi Playlist Creator, a sharing/creation platform for Bambi Sleep Playlists. This page has a bunch of playlists to get started with!" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-EWDFYH4Z6D"></script> 
   <script>
