--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Bambi Playlist Creator | Home</title>  
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">   
-  <meta name="description" content="Bambi Playlist Creator, a sharing/creation platform for Bambi Sleep Playlists" />
+  <meta name="description" content="Bambi Playlist Creator, a sharing/creation platform for Bambi Sleep Playlists. This is the home page where you can create your playlists!" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-EWDFYH4Z6D"></script> 
   <script>
