--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
             Instructions: Click the checkboxes to select the file you want in your playlist. Drag the GRAY PART of the box in the change order section, if you click and drag
             the link part it will cause errors (if you accidentally do this, just check and uncheck a checkbox and it should fix it). Click create AFTER ANY CHANGES! Click the play 
             and pause buttons to play and pause the playlist. Copy the permalink and share it with your friends to enjoy the Bambi Sleep Experience together!
-            <br><br> Please contact me with any feedback! <br>KatieGirl#3059<br><a href="https://discord.gg/ucY2jU2r">My Discord server</a><br><a href="https://hypnotube.com/user/katiegirl-39074/">Me on Hypnotube</a>
+            <br><br> Please contact me with any feedback! <br>KatieGirl#3059<br><a href="https://discord.gg/kHxKqRC3vs">My Discord server</a><br><a href="https://hypnotube.com/user/katiegirl-39074/">Me on Hypnotube</a>
             <br>
             <h3>Changelog</h3>
             <p>v1.0.0 - First release! Not all files added and minor bugs (including mediafire hosting)</p>
@@ -65,7 +65,7 @@
   </div><br><br><br><br><br><br><br><br><br>
   <footer class="footer">
     <div class="footer-copyright text-center py-3">
-      © KatieGirl 2021 | KatieGirl#3059 <a href="https://discord.gg/ucY2jU2r">https://discord.gg/ucY2jU2r</a> - All of the Bambi/Bambi Sleep copyright goes to the creator or Bambi Sleep (<a href="https://bambisleep.blogspot.com/">https://bambisleep.blogspot.com/</a>)
+      © KatieGirl 2021 | KatieGirl#3059 <a href="https://discord.gg/kHxKqRC3vs">https://discord.gg/kHxKqRC3vs</a> - All of the Bambi/Bambi Sleep copyright goes to the creator or Bambi Sleep (<a href="https://bambisleep.blogspot.com/">https://bambisleep.blogspot.com/</a>)
     </div>
   </footer>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
