--- a/perma.html
+++ b/perma.html
@@ -47,7 +47,10 @@
           <h3>My Favs</h3>
           <p><a href="/perma.html?list=35,2,3,5,37,8,10">Bambi Makeover (thanks to Bambi Sparkles#9764)</a>
           <br><a href="/perma.html?list=1,2,4,8,33,14,28,34,18,9,10">Ultimate Brain Fry (thanks to Curiouser#8137)</a></p>
-          <h3>Getting Started (Bambi calendar)</h3>
+          <h3>Getting Started</h3>
+          <br>A lot of Bambis recommend that you start off wit the simple 1,2,3,10 file for complete beginners. Personally, I started with this (looped for a bit) and then went onto the callendar
+          <p><a href="/perma.html?list=1,2,3,10">Beginner Playlist</a></p>
+          <h3>Bambi calendar</h3>
           <p><a href="/perma.html?list=1,2,3,27,6,7,8,10">Playlist 1 for 4 weeks</a>
           <br><a href="/perma.html?list=1,2,3,27,28,29,6,7,8,9,32,33,34,10">Playlist 2 for the next 4 weeks after the first 4 weeks have passed.</a>
           <br><a href="/perma.html?list=11,27,28,29,13,14,32,33,34,15">Playlist 3 for additional 4 weeks. You have to listen to the Refresher-Playlist at this page, at least two times a week from this point on and to Playlist 3 on all other days.</a>
