--- a/about.html
+++ b/about.html
@@ -18,7 +18,9 @@
     gtag('js', new Date());
 
     gtag('config', 'G-EWDFYH4Z6D');
-  </script> 
+  </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7150682276545159"
+     crossorigin="anonymous"></script>
 </head>    
 
 <body>
