--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
     gtag('config', 'G-EWDFYH4Z6D');
   </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7150682276545159"
+     crossorigin="anonymous"></script>
 </head>    
 
 <body>
