--- a/perma.html
+++ b/perma.html
@@ -41,6 +41,7 @@
             <h3>Click play to listen!</h3>
             <br><span id="nfils">Loading...</span> Files, Playlist duration: <span id="dur">Loading... (this may take up to 30 seconds)</span><br>
             <button id="play" class="btn btn-primary">Play</button><button id="stop" class="btn btn-primary">Pause</button>
+            <a id="audio_download"></a>
             <hr/>
           </form>
           <p class="text-center">Permalink: <a id="permLink" href=""></a></p>
