Renaming perma to player

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <ul>
     <li class="s"><a href="/">Home</a></li>
     <li class="s"><a href="/about.html">About</a></li>
-    <li class="s"><a href="/perma.html">Perma</a></li>
+    <li class="s"><a href="/perma.html">Player</a></li>
   </ul>
   <div class="container" style="width: 650px;"> 
     <div class="row">
