--- a/perma.html
+++ b/perma.html
@@ -63,7 +63,7 @@
         </div>
       </div>
     </div>
-  </div><div style="display: none;"><iframe data-aa='1989761' src='//ad.a-ads.com/1989761?size=728x90' style='width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe></div><br><br><br><br><br><br><br><br><br>
+  </div><br><br><iframe data-aa='1989761' src='//ad.a-ads.com/1989761?size=728x90' style='width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe><br><br><br><br><br><br><br>
   <footer class="footer">
     <div class="footer-copyright text-center py-3">
       © KatieGirl 2021 | KatieGirl#3059 <a href="https://discord.gg/kHxKqRC3vs">https://discord.gg/kHxKqRC3vs</a> - All of the Bambi/Bambi Sleep copyright goes to the creator or Bambi Sleep (<a href="https://bambisleep.blogspot.com/">https://bambisleep.blogspot.com/</a>)
