--- a/perma.html
+++ b/perma.html
@@ -40,7 +40,7 @@
           <form onInput="inputHandle();" onSubmit="return false;">
             <h3>Click play to listen!</h3>
             <br><span id="nfils">Loading...</span> Files, Playlist duration: <span id="dur">Loading... (this may take up to 30 seconds)</span><br>
-            <button id="play" class="btn btn-primary">Play</button><button id="stop" class="btn btn-primary">Pause</button>
+            <button id="play" class="btn btn-primary">Play</button><button id="stop" class="btn btn-primary">Pause</button><div id="downloadbutton"></div>
             <a id="audio_download"></a>
             <hr/>
           </form>
