--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <div class="container" style="width: 650px;"> 
     <div class="row">
       <div class="col-lg-12">
-        <h1 class="text-center">Bambi Playlist Creator v1.0.2</h1>
-        <h3 style="color:red;">WARNING: In order for the playlist order to work, you must not drag with the white part (the link) but with the dark gray part. If you accidentally do this, just click and unclick a checkbox and it will refresh</h3>
+        <h1 class="text-center">Bambi Playlist Creator v1.1.0</h1>
+        <h3 style="color:red;">In order for the playlist order to work, you must not drag with the white part (the link) but with the dark gray part. If you accidentally do this, just click and unclick a checkbox and it will refresh</h3>
         <br />
         <div id="content">
           <hr />
