ecma6 html5, fixed small css bug

--- a/perma.html
+++ b/perma.html
@@ -40,7 +40,7 @@
         <br />
         <div id="content">
           <hr />
-          <form onInput="inputHandle();" onSubmit="return false;">
+          <form onInput="inputHandle();" onSubmit="() => {return false;}">
             <h3>Click play to listen!</h3>
             <br><span id="nfils">Loading...</span> Files, Playlist duration: <span id="dur">Loading... (this may take up
               to 30 seconds)</span><br>
