minor version 1.1.1 bug fixes

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
   <div class="container" style="width: 650px;"> 
     <div class="row">
       <div class="col-lg-12">
-        <h1 class="text-center">Bambi Playlist Creator v1.1.0</h1>
+        <h1 class="text-center">Bambi Playlist Creator v1.1.1</h1>
         <br />
         <div id="content">
           <hr />
@@ -49,6 +49,7 @@
             <p>v1.0.1 - Fixed almost all bugs (except mediafire hosting bug) </p>
             <p>v1.0.2 - Added About, Permalink pages. Added navbar and create button no longer needed. Fixed hosting problem (i think) using google drive now. Please let me know if there are any problems!</p>
             <p>v1.1.0 - First minor version, added progress bar and download button, beginning refactoring code, still need to debug iOS, please give me more suggestions</p>
+            <p>v1.1.1 - Minor bug fixes, adding in service worker for caching</p>
 
             <br>
             <h3>Donate</h3>
