reverting more changes

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         <br />
         <div id="content">
           <hr />
-          <form onInput="inputHandle();" onSubmit="() => {return false;}">
+          <form onInput="inputHandle();" onSubmit="return false;">
             Bambi Playlist Creator is a small project that I (Katie, Kat for short) created because I was frustrated that I had to go and find 
             specific files from all over the place and then use some sketchy audio file splicer to patch them together. The worse thing was that
             I also had to use up TONS of cloud storage if I wanted to share my playlist with anyone and go through the sharing permission shenanigans
