--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <br />
         <div id="content">
           <hr />
-          <form onInput="inputHandle();" onSubmit="() => {return false;}">
+          <form onInput="inputHandle();" onSubmit="return false;">
             <h3>Step 1: Select Your Files (if you came here from a sharing link, just click play!)</h3>
             <div class="form-group">
               
