update to ga4 analytics

--- a/perma.html
+++ b/perma.html
@@ -11,18 +11,15 @@
   <link href="css/style.css" rel="stylesheet">
   <meta name="description"
     content="Bambi Playlist Creator, a sharing/creation platform for Bambi Sleep Playlists. This page has a bunch of playlists to get started with!" />
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EWDFYH4Z6D"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-72KPPC5G2H"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-
-    gtag('config', 'G-EWDFYH4Z6D');
-  </script>
+  gtag('config', 'G-72KPPC5G2H');
+</script>
 </head>
 
 <body>
