--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-72KPPC5G2H');
+  gtag('config', 'G-EWDFYH4Z6D');
 </script>
   
 </head>    
