adding bambi puppet princess loops

--- a/index.html
+++ b/index.html
@@ -266,13 +266,44 @@
                   <span class="checkmark"></span>
                 </label>
 
-                <label class="container">07 Makeover Awakener
+                <label class="container">06 Makeover Awakener
                   <input type="checkbox">
                   <span class="checkmark"></span>
                 </label>
               </div>
               <!-- ================================================= --><br>
               <!-- ================================================= -->
+              <div>Bambi Puppet Princess Loops<br>
+                <label class="container">01 Sleepyhead
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">02 Bobblehead
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+                
+                <label class="container">03 Bambidoll
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">04 Giggledoll
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">05 Ohmigod
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+
+                <label class="container">06 Ziplock
+                  <input type="checkbox">
+                  <span class="checkmark"></span>
+                </label>
+              </div>
             </div>
             <h3>Step 2: Change Order</h3>
             <div id="order">
