playlist file view feature

--- a/perma.html
+++ b/perma.html
@@ -45,6 +45,8 @@
               class="btn btn-primary">Pause</button><span id="downloadbutton"></span>
             <a id="audio_download"></a>
             <br><br>
+            <div id="list"></div>
+            <br>
             <div class="prog">
               <div class="prog-inner"></div>
             </div>
