(BETA) create feed list element

--- a/feed.html
+++ b/feed.html
@@ -35,7 +35,7 @@
         <br />
         <div id="content">
           <hr />
-          Feed
+          <div id="feed"></div>
         </div>
       </div>
     </div>
