(BETA) add post functionality 1/2

--- a/perma.html
+++ b/perma.html
@@ -50,6 +50,10 @@
             <div class="prog">
               <div class="prog-inner"></div>
             </div>
+            <br>
+            <input type="text" id="feed-username" placeholder="username"><br>
+            <input type="text" id="feed-name" placeholder="playlist name"><br>
+            <button id="post" onclick="postFeed()" class="btn btn-primary">Post</button>
             <hr />
           </form>
           <p class="text-center">Permalink: <a id="permLink" href=""></a></p>
