--- a/perma.html
+++ b/perma.html
@@ -39,7 +39,7 @@
           <hr />
           <form onInput="inputHandle();" onSubmit="return false;">
             <h3>Click play to listen!</h3>
-            <br><span id="nfils">Loading...</span> Files, Playlist duration: <span id="dur">Loading... (this may take up
+            <br><div id="playlist-stats"></div><br><span id="nfils">Loading...</span> Files, Playlist duration: <span id="dur">Loading... (this may take up
               to 30 seconds)</span><br>
             <br><button id="play" class="btn btn-primary">Play</button><button id="stop"
               class="btn btn-primary">Pause</button><span id="downloadbutton"></span>
