--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
     <li class="s"><a href="/">Home</a></li>
     <li class="s"><a href="/about.html">About</a></li>
     <li class="s"><a href="/perma.html">Player</a></li>
+    <li class="s"><a href="/feed.html"><b>(BETA)</b> Public playlists</a></li>
   </ul>
   <div class="container" style="width: 650px;"> 
     <div class="row">
