--- a/perma.html
+++ b/perma.html
@@ -67,8 +67,8 @@
             <br><a href="/perma.html?list=1,2,4,8,33,14,28,34,18,9,10">Ultimate Brain Fry (thanks to Curiouser#8137)</a>
           </p>
           <h3>Getting Started</h3>
-          <br>A lot of Bambis recommend that you start off wit the simple 1,2,3,10 file for complete beginners.
-          Personally, I started with this (looped for a bit) and then went onto the callendar
+          <br>A lot of Bambis recommend that you start off with the simple 1,2,3,10 file for complete beginners.
+          Personally, I started with this (looped for a bit) and then went onto the calendar
           <p><a href="/perma.html?list=1,2,3,10">Beginner Playlist</a></p>
           <h3>Bambi calendar</h3>
           <p><a href="/perma.html?list=1,2,3,27,6,7,8,10">Playlist 1 for 4 weeks</a>
