(features) loop times input

--- a/perma.html
+++ b/perma.html
@@ -45,7 +45,9 @@
             <br><button id="play" class="btn btn-primary">Play</button><button id="stop"
               class="btn btn-primary">Pause</button><span id="downloadbutton"></span>
             <a id="audio_download"></a>
-            <br><br>
+            <br>
+            <p>Loop <input id="loops" type="number" max="999" value="0" min="0" class="form-control" style="width:70px;display:inline"> times </p>
+            <br>
             <div id="list"></div>
             <br>
             <div class="prog">
