--- a/perma.html
+++ b/perma.html
@@ -11,15 +11,16 @@
   <link href="css/style.css" rel="stylesheet">
   <meta name="description"
     content="Bambi Playlist Creator, a sharing/creation platform for Bambi Sleep Playlists. This page has a bunch of playlists to get started with!" />
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-72KPPC5G2H"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-EWDFYH4Z6D');
-</script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EWDFYH4Z6D"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-EWDFYH4Z6D');
+  </script>
 </head>
 
 <body>
