--- a/feed.html
+++ b/feed.html
@@ -10,16 +10,16 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">   
   <meta name="description" content="Bambi Playlist Creator, a sharing/creation platform for Bambi Sleep Playlists. This is the home page where you can create your playlists!" />
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-72KPPC5G2H"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-EWDFYH4Z6D');
-</script>
   
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EWDFYH4Z6D"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-EWDFYH4Z6D');
+  </script>
 </head>    
 
 <body>
