--- a/perma.html
+++ b/perma.html
@@ -4,14 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Bambi Playlist Creator | Permalink</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags --> 
+  <title>Bambi Playlist Creator | Home</title>  
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-  <meta name="description"
-    content="Bambi Playlist Creator, a sharing/creation platform for Bambi Sleep Playlists. This page has a bunch of playlists to get started with!" />
-
+  <link href="css/style.css" rel="stylesheet">   
+  <meta name="description" content="Bambi Playlist Creator, a sharing/creation platform for Bambi Sleep Playlists. This is the home page where you can create your playlists!" />
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-EWDFYH4Z6D"></script>
   <script>
@@ -21,7 +19,8 @@
 
     gtag('config', 'G-EWDFYH4Z6D');
   </script>
-</head>
+  
+</head>    
 
 <body>
   <ul>
@@ -30,74 +29,26 @@
     <li class="s"><a href="/perma.html">Player</a></li>
     <li class="s"><a href="/feed.html"><b>(BETA)</b> Public playlists</a></li>
   </ul>
-  <div class="container" style="width: 650px;">
+  <div class="container" style="width: 650px;"> 
     <div class="row">
-      <div id="alertBoxs"></div>
       <div class="col-lg-12">
         <h1 class="text-center">Bambi Playlist Creator v1.1.1</h1>
-        <h3 style="color:red;">This may take up to 1 minute to load all files now</h3>
-        <br />
         <div id="content">
-          <hr />
-          <form onInput="inputHandle();" onSubmit="return false;">
-            <h3>Click play to listen!</h3>
-            <br><div id="playlist-stats"></div><br><span id="nfils">Loading...</span> Files, Playlist duration: <span id="dur">Loading... (this may take up
-              to 30 seconds)</span><br>
-            <br><button id="play" class="btn btn-primary">Play</button><button id="stop"
-              class="btn btn-primary">Pause</button><span id="downloadbutton"></span>
-            <a id="audio_download"></a>
-            <br>
-            <p>Loop <input id="loops" type="number" max="999" value="0" min="0" class="form-control" style="width:70px;display:inline"> times </p>
-            <br>
-            <div id="list"></div>
-            <br>
-            <div class="prog">
-              <div class="prog-inner"></div>
-            </div>
-            <br>
-            <p>Post your playlist!</p>
-            <br>
-            <label for="feed-username">Username</label>
-            <input type="text" id="feed-username" class="form-control" placeholder="username">
-            <label for="feed-name">Playlist name</label>
-            <input type="text" id="feed-name" class="form-control" placeholder="playlist name">
-            <button id="post" onclick="postFeed()" class="btn btn-primary">Post</button>
-            <hr />
-          </form>
-          <p class="text-center">Permalink: <a id="permLink" href=""></a></p>
-          <h3>My Favs</h3>
-          <p><a href="/perma.html?list=35,2,3,5,37,8,10">Bambi Makeover (thanks to Bambi Sparkles#9764)</a>
-            <br><a href="/perma.html?list=1,2,4,8,33,14,28,34,18,9,10">Ultimate Brain Fry (thanks to Curiouser#8137)</a>
-          </p>
-          <h3>Getting Started</h3>
-          <br>A lot of Bambis recommend that you start off with the simple 1,2,3,10 file for complete beginners.
-          Personally, I started with this (looped for a bit) and then went onto the calendar
-          <p><a href="/perma.html?list=1,2,3,10">Beginner Playlist</a></p>
-          <h3>Bambi calendar</h3>
-          <p><a href="/perma.html?list=1,2,3,27,6,7,8,10">Playlist 1 for 4 weeks</a>
-            <br><a href="/perma.html?list=1,2,3,27,28,29,6,7,8,9,32,33,34,10">Playlist 2 for the next 4 weeks after the
-              first 4 weeks have passed.</a>
-            <br><a href="/perma.html?list=11,27,28,29,13,14,32,33,34,15">Playlist 3 for additional 4 weeks. You have to
-              listen to the Refresher-Playlist at this page, at least two times a week from this point on and to
-              Playlist 3 on all other days.</a>
-            <br><a href="/perma.html?list=11,27,28,18,29,13,17,14,32,33,34,15">Playlist 4 for additional 4 weeks. You
-              have to listen to the Refresher-Playlist at this page, at least two times a week from this point on and to
-              Playlist 4 on all other days.</a>
-            <br><a href="/perma.html?list=24,11,3,27,28,29,6,7,8,9,32,33,34,15">Refresher-Playlist</a>
-            <br><a href="/perma.html?list=11,27,28,18,29,13,17,26,14,32,33,34,15">Fashionista</a>
-            <br><a href="/perma.html?list=11,24,27,35,36,32,33,34,40">Beauty salon</a>
-          </p>
+          <h2>NOTICE:</h2>
+          <p>bambi playlist has been an awesome and fairly successful project of mine but it is time to move on :). I don't have the time or the commitment to keep it maintained anymore but thank you for all your 
+          support and kind words! In 15 seconds you will be redirected automatically to the <a href="https://bambicloud.com/">bambicloud.com</a> website maintained by bambiislv. She has done
+          an amazing job (she's waaay better at frontend than me hehe) at taking a cool idea and turning it into something awesome.</p>
+          <p>On a side note, I have also conducted a security audit on bambicloud's infrastructure and code (all of the problems were remediated quickly and without impact) and will continue to help keep it secure.</p>
         </div>
       </div>
     </div>
   </div><br><br><br><br><br><br><br><br><br>
   <footer class="footer">
     <div class="footer-copyright text-center py-3">
-      © KatieGirl 2021 | KatieGirl#3059 <a href="https://discord.gg/kHxKqRC3vs">https://discord.gg/kHxKqRC3vs</a> - All
-      of the Bambi/Bambi Sleep copyright goes to the creator or Bambi Sleep (<a
-        href="https://bambisleep.blogspot.com/">https://bambisleep.blogspot.com/</a>)
+      © KatieGirl 2021 | KatieGirl#3059 <a href="https://discord.gg/kHxKqRC3vs">https://discord.gg/kHxKqRC3vs</a> - All of the Bambi/Bambi Sleep copyright goes to the creator or Bambi Sleep (<a href="https://bambisleep.blogspot.com/">https://bambisleep.blogspot.com/</a>)
     </div>
   </footer>
+  <script>setTimeout(()=> {window.location = "https://bambicloud.com/"}, 15000)</script>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
