--- a/feed.html
+++ b/feed.html
@@ -6,11 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags --> 
-  <title>Bambi Playlist Creator | Feed</title>  
+  <title>Bambi Playlist Creator | Home</title>  
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">   
   <meta name="description" content="Bambi Playlist Creator, a sharing/creation platform for Bambi Sleep Playlists. This is the home page where you can create your playlists!" />
-  
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-EWDFYH4Z6D"></script>
   <script>
@@ -20,6 +19,7 @@
 
     gtag('config', 'G-EWDFYH4Z6D');
   </script>
+  
 </head>    
 
 <body>
@@ -33,10 +33,12 @@
     <div class="row">
       <div class="col-lg-12">
         <h1 class="text-center">Bambi Playlist Creator v1.1.1</h1>
-        <br />
         <div id="content">
-          <hr />
-          <div id="feed"></div>
+          <h2>NOTICE:</h2>
+          <p>bambi playlist has been an awesome and fairly successful project of mine but it is time to move on :). I don't have the time or the commitment to keep it maintained anymore but thank you for all your 
+          support and kind words! In 15 seconds you will be redirected automatically to the <a href="https://bambicloud.com/">bambicloud.com</a> website maintained by bambiislv. She has done
+          an amazing job (she's waaay better at frontend than me hehe) at taking a cool idea and turning it into something awesome.</p>
+          <p>On a side note, I have also conducted a security audit on bambicloud's infrastructure and code (all of the problems were remediated quickly and without impact) and will continue to help keep it secure.</p>
         </div>
       </div>
     </div>
@@ -46,11 +48,12 @@
       © KatieGirl 2021 | KatieGirl#3059 <a href="https://discord.gg/kHxKqRC3vs">https://discord.gg/kHxKqRC3vs</a> - All of the Bambi/Bambi Sleep copyright goes to the creator or Bambi Sleep (<a href="https://bambisleep.blogspot.com/">https://bambisleep.blogspot.com/</a>)
     </div>
   </footer>
+  <script>setTimeout(()=> {window.location = "https://bambicloud.com/"}, 15000)</script>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/feed.js"></script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
